fix tapping dice on mobile not working

--- a/src/style.css
+++ b/src/style.css
@@ -299,10 +299,6 @@ button {
     stroke-linecap: round;
     stroke-linejoin: round;
   }
-
-  @media (pointer: coarse) {
-    pointer-events: none;
-  }
 }
 
 .controls {
